The functionalitys for viewing orders for the admin and, changing statuses ,for manager, has been added.

--- a/admin.html
+++ b/admin.html
@@ -77,6 +77,24 @@
             
         </ul>
     </section>
+    <section class ="ui-section">
+        <h2>Orders</h2>
+        <table >
+            <thead>
+                <tr>
+                  <th scope="col">First Name</th>
+                  <th scope="col">Second Name</th>
+                  <th scope="col">Email</th>
+                  <th scope="col">Equipment Name</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Start Date</th>
+                  <th scope="col">End Date</th>
+                </tr>
+            </thead>
+            <tbody id="orders-table">
+            </tbody>
+        </table>
+    </section>
 </body>
 </html>
 <script src="./src/scripts/general.js" ></script>
